<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AgilePokerActivity!</string>
    <string name="app_name">AgilePoker</string>
    <string name="open_card">Open Card</string>
    <string name="enter_number">Enter Number</string>
    <string name="remaining_time">Closing in : %d seconds</string>
    <string name="timer_reset">Time reset to %d seconds.</string>
    <string name="select_fg_color">Text Color</string>
    <string name="select_bg_color">Background Color</string>
    <string name="choose_card_delay_time">Choose Card Time</string>
    <string name="dialog_okay">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="seconds_label">Seconds</string>
    <string-array name="pref_list">
        <item>Text Color</item>
        <item>Background Color</item>
        <item>Card Time</item>
    </string-array>

</resources>