<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/main_container" >

    <EditText
        android:id="@+id/edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number" />

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_card" />

    <Button
        android:id="@+id/color_fg_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_fg_color" />

    <Button
        android:id="@+id/color_bg_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_bg_color" />

</LinearLayout>